nivasa-macros/tests/trybuild/schedule_interval_static_method.stderr
error: `#[interval]` only supports inherent methods
 --> tests/trybuild/schedule_interval_static_method.rs:7:8
  |
7 |     fn tick() {}
  |        ^^^^
