nivasa-macros/tests/trybuild/schedule_interval_static_method.rs
use nivasa_macros::interval;

struct Jobs;

impl Jobs {
    #[interval(5000)]
    fn tick() {}
}

fn main() {}
